# dozorniy

./: .gitignore  LICENSE  README.md  default.json  pyproject.toml  pyrightconfig.json  todo.md
src/: default.json  pyproject.toml  pyrightconfig.json
src/main_app/: default.json  main.py
src/main_app/config/: default.json  handlers.py  loader.py  settings.py
src/main_app/connection/: connection_factory.py  web_socket.py
src/main_app/connection/abstracts/: __init__.py  base.py
src/main_app/core/: dispatcher.py  events.py  loader.py  registry.py
src/main_app/core/abstracts/: __init__.py  factory.py
src/main_app/core/events/: __init__.py  base.py  logs.py  network.py
src/main_app/core/middleware/: base.py
src/main_app/core/requests/: base.py
src/main_app/core/responses/: base.py  middleware.py  responsebus.py
src/main_app/features/: feature.py
src/main_app/features/ping/: feature.py  handler.py  request.py  response.py
src/main_app/features/shell/: feature.py  handler.py  request.py  response.py
src/main_app/gui/: cli.py  gui_factory.py  state.py
src/main_app/gui/abstracts/: __init__.py  base.py
src/main_app/gui/flet/: app.py
src/main_app/ui/: gui_factory.py
src/main_app/ui/gui/: app.py
src/user_app/: TASKS.md  main.py  pyproject.toml
src/user_app/connection/: __init__.py  websocket.py
src/user_app/connection/abstracts/: __init__.py  base.py
src/user_app/core/: dispatcher.py  events.py  loader.py  registry.py
src/user_app/core/middleware/: base.py
src/user_app/core/requests/: base.py
src/user_app/features/: feature.py
(+18 files in other folders)
