[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.80.2",
    "pydantic>=2.12.5",
    "websockets>=15.0.1",
]
[tool.basedpyright]
typeCheckingMode = "standard"
venv = ".venv"
venvPath = "/home/cnvls/python/dozorniy/src"
reportAny = false
reportExplicitAny = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false

reportDeprecated = false

reportImplicitRelativeImport = "none"
reportMissingTypeArgument = false
